# Paper-Recommendations

./: .gitignore  Dockerfile  Dockerfile-nvidia  Paper_Trail.ipynb  Paper_Trail_Milvus.ipynb  Testing_BERT.ipynb  Untitled.ipynb  docker-compose.yml  readme.md  requirements-nvidia.txt  requirements.txt  scrape_data.py
app/: log_config.ini  main.py  pyproject.toml
app/backend/: api.py  constants.py  helpers.py  milvus_schema.py
app/backend/pydantic_models/: article.py  weighted_edge.py
app/backend/utils/: logger.py  milvus_client.py  oag_bert_model.py  open_alex_client.py  singleton.py
app/frontend/resources/: index.css
app/frontend/resources/javascript/: autocomplete.js  globals.js  visualization.js
backend/: README.md  log_config.ini  main.py
backend/app/: api.py  constants.py  helpers.py  log_config.py  milvus_schema.py  models.py
backend/app/utils/: logger.py  oag_bert_model.py
backend/frontend/: index.html
backend/frontend/resources/: index.css
backend/frontend/resources/javascript/: autocomplete.js  globals.js  visualization.js
frontend/: autocomplete.js  index.css  index.html  package-lock.json  package.json  tsconfig.json  visualization.js
frontend/public/: index.html
frontend/resources/javascript/: autocomplete.js  global_vars.js  visualization.js
frontend/src/: App.tsx  global.d.ts  index.tsx
frontend/src/components/SearchModal/: SearchInterface.ts  (+3 more)
react/: index.html  package-lock.json  package.json
react/src/: App.tsx  index.css  main.tsx
react/src/app/: Hooks.ts  OpenAlexAPI.ts  PaperRecommendationsAPI.ts  Store.ts
(+6 files in other folders)
