[tool.poetry]
name = "paper-recommender"
version = "0.1.0"
description = ""
authors = ["Steven Fields"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
fastapi = "^0.94.1"
Jinja2 = "3.*"
pymilvus = "2.2.7"
cogdl = "0.6"
uvicorn = "0.21.0"
rich = "13.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
